# Backend

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py  help.md
alembic/versions/: 5011e70402fc_book_tok.py  862d799bf99b_initial.py
backend/: __main__.py  crud.py  enums.py  models.py  schemas.py
backend/core/: broker.py  db.py  logger.py  settings.py
backend/routes/: authorization.py  booking.py  configuration.py  result_consuming.py  streaming.py  sync_fpga_task.py  task.py  terminal.py  video_streaming.py
backend/utils/: auth.py  s3.py
