[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maksprots <makslive@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
passlib = "^1.7.4"
fastapi-offline = "^1.7.3"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.1"
cryptography = "^44.0.2"
pyjwt = "^2.10.1"
pydantic = {extras = ["email"], version = "^2.11.3"}
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"


[tool.poetry.dev-dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
