[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maksprots <makslive@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
passlib = "^1.7.4"
fastapi-offline = "^1.7.3"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.1"
cryptography = "^44.0.2"
pyjwt = "^2.10.1"
pydantic = {extras = ["email"], version = "^2.11.3"}
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
aiobotocore = "^2.21.1"
faststream = {extras = ["fastapi"], version = "^0.5.39"}
aio-pika = "^9.5.5"
websockets = "^15.0.1"
httpx = "^0.28.1"
loguru = "^0.7.3"


[tool.poetry.dev-dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
